setup local database and save logged in

--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -1,7 +1,8 @@
 {
   "text": {
     "username": "Username",
-    "password": "Password"
+    "password": "Password",
+    "warning": "Warning"
   },
   "error": {
     "incorrect_ip_password": "Incorrect ip mac or password"
