--- a/assets/locales/vi_VN.json
+++ b/assets/locales/vi_VN.json
@@ -1,7 +1,8 @@
 {
   "text": {
     "username": "Tài khoản",
-    "password": "Mật khẩu"
+    "password": "Mật khẩu",
+    "warning": "Cảnh báo"
   },
   "error": {
     "incorrect_ip_password": "Sai địa chỉ ip hoặc mật khẩu"
